--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry kind="lib" path="Lib/mail.jar"/>
 	<classpathentry kind="lib" path="Lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="Lib/mysql-connector-java-5.1.31-bin.jar"/>
+	<classpathentry kind="lib" path="Lib/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="Lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="Lib/httpclient-4.3.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
