--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/Socialhandler.java=UTF-8
+encoding//src/datehandler.java=UTF-8
 encoding//src/emailhandler.java=UTF-8
 encoding//src/smshandler.java=UTF-8
+encoding//src/xmlhandler.java=UTF-8
