--- a/.classpath
+++ b/.classpath
@@ -5,9 +5,10 @@
 	<classpathentry kind="lib" path="Lib/rt.jar"/>
 	<classpathentry kind="lib" path="Lib/mail.jar"/>
 	<classpathentry kind="lib" path="Lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="Lib/mysql-connector-java-5.1.31-bin.jar"/>
 	<classpathentry kind="lib" path="Lib/httpcore-4.3.2.jar"/>
 	<classpathentry kind="lib" path="Lib/commons-logging-1.1.3.jar"/>
 	<classpathentry kind="lib" path="Lib/httpclient-4.3.5.jar"/>
+	<classpathentry kind="lib" path="Lib/mysql-connector-java-5.1.31-bin.jar"/>
+	<classpathentry kind="lib" path="Lib/selenium-server-standalone-2.44.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
