--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,4 @@ encoding//src/datehandler.java=UTF-8
 encoding//src/emailhandler.java=UTF-8
 encoding//src/smshandler.java=UTF-8
 encoding//src/xmlhandler.java=UTF-8
+encoding/<project>=UTF-8
